--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 
    <main>
       <!--Section Main Slogan H1 -->
-      <section class="conteiner hero">
+      <section class="hero">
+         <div class="conteiner">
          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <!--Button -->
          <button class="base-button" type="button">Order Service</button>
-         <!--Button -->
+         </div>
       </section>
       <!--Section 1 Work Directions -->
       <section class="section">
