--- a/index.html
+++ b/index.html
@@ -13,116 +13,127 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;1,700&display=swap"
       rel="stylesheet">
    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-  
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+
    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
    <header>
-      <div class="conteiner"> 
-      <nav>
-         <!-- Logo  -->
-         <a class="link link-logos" href="./index.html">Web<span style="color: var(--title-text-color-basic);">Studio</span></a>
+      <div class="conteiner">
+         <nav>
+            <!-- Logo  -->
+            <a class="link link-logos" href="./index.html">Web<span
+                  style="color: var(--title-text-color-basic);">Studio</span></a>
 
-         <ul class="list">
-            <li><a class="link link-item" href="./index.html">Studio</a></li>
-            <li><a class="link link-item" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="link link-item" href="">Contacts</a></li>
-         </ul>
-      </nav>
-      <address class="adrs-menu">
-         <ul class="list">
-            <li> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li> <a class="link link-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-         </ul>
-      </address>
-   </div>
+            <ul class="list">
+               <li><a class="link link-item" href="./index.html">Studio</a></li>
+               <li><a class="link link-item" href="./portfolio.html">Portfolio</a></li>
+               <li><a class="link link-item" href="">Contacts</a></li>
+            </ul>
+         </nav>
+         <address class="adrs-menu">
+            <ul class="list">
+               <li> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+               <li> <a class="link link-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+         </address>
+      </div>
    </header>
 
    <main>
       <!--Section Main Slogan H1 -->
       <section class="hero">
          <div class="conteiner">
-         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <!--Button -->
-         <button class="base-button" type="button">Order Service</button>
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <!--Button -->
+            <button class="base-button" type="button">Order Service</button>
          </div>
       </section>
       <!--Section 1 Work Directions -->
       <section class="section">
-         <h2 class="section-title-sz-two" hidden>Work Directions</h2> <!-- Hiden header -->
-         <ul class="list"> <!--list-rst-->
-            <li>
-               <h3 class="section-title-sz-three">Strategy</h3>
-               <p class="section-parag">Our goal is to identify the business problem to walk away with the perfect and
-                  creative solution.</p>
-            </li>
-            <li>
-               <h3 class="section-title-sz-three">Punctuality</h3>
-               <p class="section-parag">Bring the key message to the brand's audience for the best price within the
-                  shortest possible time.
-               </p>
-            </li>
-            <li>
-               <h3 class="section-title-sz-three">Diligence</h3>
-               <p class="section-parag">Research and confirm brands that present the strongest digital growth
-                  opportunities and minimize risk.
-               </p>
-            </li>
-            <li>
-               <h3 class="section-title-sz-three">Technologies</h3>
-               <p class="section-parag">Design practice focused on digital experiences. We bring forth a deep passion
-                  for problem-solving.</p>
-            </li>
-         </ul>
+         <div class="conteiner">
+            <h2 class="section-title-sz-two" hidden>Work Directions</h2> <!-- Hiden header -->
+            <ul class="list"> <!--list-rst-->
+               <li>
+                  <h3 class="section-title-sz-three">Strategy</h3>
+                  <p class="section-parag">Our goal is to identify the business problem to walk away with the perfect
+                     and
+                     creative solution.</p>
+               </li>
+               <li>
+                  <h3 class="section-title-sz-three">Punctuality</h3>
+                  <p class="section-parag">Bring the key message to the brand's audience for the best price within the
+                     shortest possible time.
+                  </p>
+               </li>
+               <li>
+                  <h3 class="section-title-sz-three">Diligence</h3>
+                  <p class="section-parag">Research and confirm brands that present the strongest digital growth
+                     opportunities and minimize risk.
+                  </p>
+               </li>
+               <li>
+                  <h3 class="section-title-sz-three">Technologies</h3>
+                  <p class="section-parag">Design practice focused on digital experiences. We bring forth a deep passion
+                     for problem-solving.</p>
+               </li>
+            </ul>
+         </div>
       </section>
       <!--Section 2 - What are we doing-->
       <section class="section">
-         <h2 class="section-title-sz-two">What are we doing</h2>
-         <ul class="list"> <!--list-rst-->
-            <li><img src="./images/screen-w360m.jpg" width="360" alt="Monitor on the table"></li>
-            <li><img src="./images/pages-in-phone-w360m.jpg" width="360" alt="Pages fly to the phone"></li>
-            <li><img src="./images/phone-laptop-w360m.jpg" width="360"
-                  alt="Smartphone in hend and laptop on the background"></li>
-         </ul>
+         <div class="conteiner">
+            <h2 class="section-title-sz-two">What are we doing</h2>
+            <ul class="list"> <!--list-rst-->
+               <li><img src="./images/screen-w360m.jpg" width="360" alt="Monitor on the table"></li>
+               <li><img src="./images/pages-in-phone-w360m.jpg" width="360" alt="Pages fly to the phone"></li>
+               <li><img src="./images/phone-laptop-w360m.jpg" width="360"
+                     alt="Smartphone in hend and laptop on the background"></li>
+            </ul>
+         </div>
       </section>
       <!--Section 3 - Our Teamv-->
       <section class="section bkg-cloud">
-         <h2 class="section-title-sz-two">Our Team</h2>
-         <ul class="list"> <!--list-rst-->
-            <li class="card">
-               <img src="./images/tiam-foto/mar-guerrero-w264.jpg" alt="Mark Guerrero Product Designer" width="264">
-               <h3 class="section-title-sz-three">Mark Guerrero</h3>
-               <p class="section-parag">Product Designer</p>
-            </li>
-            <li class="card">
-               <img src="./images/tiam-foto/tom-ford-w264.jpg" alt="Tom Ford Frontend Developer" width="264">
-               <h3 class="section-title-sz-three">Tom Ford</h3>
-               <p class="section-parag">Frontend Developer</p>
-            </li>
-            <li class="card">
-               <img src="./images/tiam-foto/camila-garcia-w264.jpg" alt="Camila Garcia Marketing" width="264">
-               <h3 class="section-title-sz-three">Camila Garcia</h3>
-               <p class="section-parag">Marketing</p>
-            </li>
-            <li class="card">
-               <img src="./images/tiam-foto/daniel-wilson-w264.jpg" alt="Daniel Wilson UI Designer" width="264">
-               <h3 class="section-title-sz-three">Daniel Wilson</h3>
-               <p class="section-parag">UI Designer</p>
-            </li>
-         </ul>
+         <div class="conteiner">
+            <h2 class="section-title-sz-two">Our Team</h2>
+            <ul class="list"> <!--list-rst-->
+               <li class="card">
+                  <img src="./images/tiam-foto/mar-guerrero-w264.jpg" alt="Mark Guerrero Product Designer" width="264">
+                  <h3 class="section-title-sz-three">Mark Guerrero</h3>
+                  <p class="section-parag">Product Designer</p>
+               </li>
+               <li class="card">
+                  <img src="./images/tiam-foto/tom-ford-w264.jpg" alt="Tom Ford Frontend Developer" width="264">
+                  <h3 class="section-title-sz-three">Tom Ford</h3>
+                  <p class="section-parag">Frontend Developer</p>
+               </li>
+               <li class="card">
+                  <img src="./images/tiam-foto/camila-garcia-w264.jpg" alt="Camila Garcia Marketing" width="264">
+                  <h3 class="section-title-sz-three">Camila Garcia</h3>
+                  <p class="section-parag">Marketing</p>
+               </li>
+               <li class="card">
+                  <img src="./images/tiam-foto/daniel-wilson-w264.jpg" alt="Daniel Wilson UI Designer" width="264">
+                  <h3 class="section-title-sz-three">Daniel Wilson</h3>
+                  <p class="section-parag">UI Designer</p>
+               </li>
+            </ul>
+         </div>
       </section>
    </main>
-
+   <!-- Footer section -->
    <footer class="footer-set">
-      <!-- Logo -->
-      <a class="link footer-link-logos" href="./index.html">
-         Web<span class="footer-parag">Studio</span></a>
-      <!-- style="color: var(--color-cloud);" -->
-      <!-- <a class="link-rst logo footer" href="./index.html"><span
+      <div class="conteiner">
+         <!-- Logo -->
+         <a class="link footer-link-logos" href="./index.html">
+            Web<span class="footer-parag">Studio</span></a>
+            <!-- style="color: var(--color-cloud);" -->
+            <!-- <a class="link-rst logo footer" href="./index.html"><span
             style="color: var(--radio-buttom-text-color);">Web</span>Studio</a> -->
-      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+         <p>Increase the flow of customers and sales for your 
+            business with digital marketing & growth solutions.</p>
+      </div>
    </footer>
 
 </body>
