--- a/portfolio.html
+++ b/portfolio.html
@@ -13,129 +13,135 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;1,700&display=swap"
       rel="stylesheet">
    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-  
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+
    <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 
 <body>
    <header>
-      <nav>
-         <!-- Logo  -->
-         <a class="link link-logos" href="./index.html">Web<span class="logo-color-two">Studio</span></a>
-         <!-- style="color: var(- -title-text-color-basic);" -->
+      <div class="conteiner">
+         <nav>
+            <!-- Logo  -->
+            <a class="link link-logos" href="./index.html">Web<span class="logo-color-two">Studio</span></a>
+            <!-- style="color: var(- -title-text-color-basic);" -->
 
-         <ul class="list">
-            <li><a class="link link-item" href="./index.html">Studio</a></li>
-            <li><a class="link link-item" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="link link-item" href="">Contacts</a></li>
-         </ul>
-      </nav>
-      <address class="adrs-menu">
-         <ul class="list">
-            <li> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li> <a class="link link-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-         </ul>
-      </address>
+            <ul class="list">
+               <li><a class="link link-item" href="./index.html">Studio</a></li>
+               <li><a class="link link-item" href="./portfolio.html">Portfolio</a></li>
+               <li><a class="link link-item" href="">Contacts</a></li>
+            </ul>
+         </nav>
+         <address class="adrs-menu">
+            <ul class="list">
+               <li> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+               <li> <a class="link link-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+         </address>
+      </div>
    </header>
 
    <!-- It is main Portfolio -->
    <main>
       <section class="section">
-         <h1 hidden>WebStudio Portfolio Page</h1>
-         <!-- Navigaton of Portfolio page -->
-         <!-- <nav> -->
-         <ul class="list"> <!-- list-rst -->
-            <li><button class="filter-button" type="button">All</button></li>
-            <li><button class="filter-button" type="button">Web Site</button></li>
-            <li><button class="filter-button" type="button">App</button></li>
-            <li><button class="filter-button" type="button">Design</button></li>
-            <li><button class="filter-button" type="button">Marketing</button></li>
-         </ul>
-         <!-- </nav> -->
-         <!-- Section Example Cards of WebStudio -->
+         <div class="conteiner">
+            <h1 hidden>WebStudio Portfolio Page</h1>
+            <!-- Navigaton of Portfolio page -->
+            <!-- <nav> -->
+            <ul class="list"> <!-- list-rst -->
+               <li><button class="filter-button" type="button">All</button></li>
+               <li><button class="filter-button" type="button">Web Site</button></li>
+               <li><button class="filter-button" type="button">App</button></li>
+               <li><button class="filter-button" type="button">Design</button></li>
+               <li><button class="filter-button" type="button">Marketing</button></li>
+            </ul>
+            <!-- </nav> -->
+            <!-- Section Example Cards of WebStudio -->
 
-         <!-- <h2>Works Example Cards of WebStudio</h2> -->
+            <!-- <h2>Works Example Cards of WebStudio</h2> -->
 
-         <ul class="list"> <!-- list-rst -->
-            <li>
-               <a class="link" href="">
-                  <img src="./images/portfolio/banking-app-interface-concept.jpg" alt="Banking App Interface Concept"
-                     width="360">
-                  <h2 class="section-title-sz-three">Banking App Interface Concept</h2>
-                  <p class="section-parag">App</p>
-               </a>
-            </li>
-            <li>
-               <a class="link" href="">
-                  <img src="./images/portfolio/cashless-payment.jpg" alt="Cashless Payment" width="360">
-                  <h2 class="section-title-sz-three">Cashless Payment</h2>
-                  <p class="section-parag">Marketing</p>
-               </a>
-            </li>
-            <li>
-               <a class="link" href="">
-                  <img src="./images/portfolio/meditaion-app.jpg" alt="Meditaion App" width="360">
-                  <h2 class="section-title-sz-three">Meditation App</h2>
-                  <p class="section-parag">App</p>
-               </a>
-            </li>
-            <li>
-               <a class="link" href="">
-                  <img src="./images/portfolio/taxi-service.jpg" alt="Taxi Service" width="360">
-                  <h2 class="section-title-sz-three">Taxi Service</h2>
-                  <p class="section-parag">Marketing</p>
-               </a>
-            </li>
-            <li>
-               <a class="link" href="">
-                  <img src="./images/portfolio/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
-                  <h2 class="section-title-sz-three">Screen Illustrations</h2>
-                  <p class="section-parag">Design</p>
-               </a>
-            </li>
-            <li>
-               <a class="link" href="">
-                  <img src="./images/portfolio/online-courses.jpg" alt="Online Courses" width="360">
-                  <h2 class="section-title-sz-three">Online Courses</h2>
-                  <p class="section-parag">Marketing</p>
-               </a>
-            </li>
-            <li>
-               <a class="link" href="">
-                  <img src="./images/portfolio/instagram-stories-concept.jpg" alt="Instagram Stories Concept"
-                     width="360">
-                  <h2 class="section-title-sz-three">Instagram Stories Concept</h2>
-                  <p class="section-parag">Design</p>
-               </a>
-            </li>
-            <li>
-               <a class="link" href="">
-                  <img src="./images/portfolio/organic-food.jpg" alt="Organic Food" width="360">
-                  <h2 class="section-title-sz-three">Organic Food</h2>
-                  <p class="section-parag">Web Site</p>
-               </a>
-            </li>
-            <li>
-               <a class="link" href="">
-                  <img src="./images/portfolio/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
-                  <h2 class="section-title-sz-three">Fresh Coffee</h2>
-                  <p class="section-parag">Web Site</p>
-               </a>
-            </li>
-         </ul>
+            <ul class="list"> <!-- list-rst -->
+               <li>
+                  <a class="link" href="">
+                     <img src="./images/portfolio/banking-app-interface-concept.jpg" alt="Banking App Interface Concept"
+                        width="360">
+                     <h2 class="section-title-sz-three">Banking App Interface Concept</h2>
+                     <p class="section-parag">App</p>
+                  </a>
+               </li>
+               <li>
+                  <a class="link" href="">
+                     <img src="./images/portfolio/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                     <h2 class="section-title-sz-three">Cashless Payment</h2>
+                     <p class="section-parag">Marketing</p>
+                  </a>
+               </li>
+               <li>
+                  <a class="link" href="">
+                     <img src="./images/portfolio/meditaion-app.jpg" alt="Meditaion App" width="360">
+                     <h2 class="section-title-sz-three">Meditation App</h2>
+                     <p class="section-parag">App</p>
+                  </a>
+               </li>
+               <li>
+                  <a class="link" href="">
+                     <img src="./images/portfolio/taxi-service.jpg" alt="Taxi Service" width="360">
+                     <h2 class="section-title-sz-three">Taxi Service</h2>
+                     <p class="section-parag">Marketing</p>
+                  </a>
+               </li>
+               <li>
+                  <a class="link" href="">
+                     <img src="./images/portfolio/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
+                     <h2 class="section-title-sz-three">Screen Illustrations</h2>
+                     <p class="section-parag">Design</p>
+                  </a>
+               </li>
+               <li>
+                  <a class="link" href="">
+                     <img src="./images/portfolio/online-courses.jpg" alt="Online Courses" width="360">
+                     <h2 class="section-title-sz-three">Online Courses</h2>
+                     <p class="section-parag">Marketing</p>
+                  </a>
+               </li>
+               <li>
+                  <a class="link" href="">
+                     <img src="./images/portfolio/instagram-stories-concept.jpg" alt="Instagram Stories Concept"
+                        width="360">
+                     <h2 class="section-title-sz-three">Instagram Stories Concept</h2>
+                     <p class="section-parag">Design</p>
+                  </a>
+               </li>
+               <li>
+                  <a class="link" href="">
+                     <img src="./images/portfolio/organic-food.jpg" alt="Organic Food" width="360">
+                     <h2 class="section-title-sz-three">Organic Food</h2>
+                     <p class="section-parag">Web Site</p>
+                  </a>
+               </li>
+               <li>
+                  <a class="link" href="">
+                     <img src="./images/portfolio/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
+                     <h2 class="section-title-sz-three">Fresh Coffee</h2>
+                     <p class="section-parag">Web Site</p>
+                  </a>
+               </li>
+            </ul>
+         </div>
       </section>
    </main>
-
+   <!-- Footer section -->
    <footer class=" footer-set">
-      <!-- Logo -->
-      <a class="link footer-link-logos" href="./index.html">Web
-         <span class="footer-parag">Studio</span></a>
-      <!-- <a class="link-rst logo footer" href="./index.html"><span
-      style="color: var(- -radio-buttom-text-color);">Web</span>Studio</a> -->
-      <p>Increase the flow of customers and sales for your business
-         with digital marketing & growth solutions.</p>
+      <div class="conteiner">
+         <!-- Logo -->
+         <a class="link footer-link-logos" href="./index.html">Web
+            <span class="footer-parag">Studio</span></a>
+         <!-- <a class="link-rst logo footer" href="./index.html"><span
+         style="color: var(- -radio-buttom-text-color);">Web</span>Studio</a> -->
+         <p>Increase the flow of customers and sales for your business
+            with digital marketing & growth solutions.</p>
+      </div>
    </footer>
 
 </body>
