--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
 
 <body>
    <header>
-      <div class="conteiner">
-         <nav>
+      <div class="conteiner conteiner-flx">
+         <nav class="conteiner-flx">
             <!-- Logo  -->
             <a class="link link-logos" href="./index.html">Web<span
                   style="color: var(--title-text-color-basic);">Studio</span></a>
 
-            <ul class="list">
-               <li><a class="link link-item" href="./index.html">Studio</a></li>
-               <li><a class="link link-item" href="./portfolio.html">Portfolio</a></li>
-               <li><a class="link link-item" href="">Contacts</a></li>
+            <ul class="list site-nav">
+               <li class="item"><a class="link link-item" href="./index.html">Studio</a></li>
+               <li class="item"><a class="link link-item" href="./portfolio.html">Portfolio</a></li>
+               <li class="item"><a class="link link-item" href="">Contacts</a></li>
             </ul>
          </nav>
          <address class="adrs-menu">
-            <ul class="list">
-               <li> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-               <li> <a class="link link-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="list adrs-menu-list">
+               <li class="item-asdr"> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+               <li class="item-asdr"> <a class="link link-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
          </address>
       </div>
