edit stily flex
section 2 -3 & h2

--- a/index.html
+++ b/index.html
@@ -54,26 +54,26 @@
       <section class="section">
          <div class="conteiner">
             <h2 class="section-title-sz-two" hidden>Work Directions</h2> <!-- Hiden header -->
-            <ul class="list"> <!--list-rst-->
-               <li>
+            <ul class="list section-wrk-dir"> <!--list-rst-->
+               <li class="item-wrk">
                   <h3 class="section-title-sz-three">Strategy</h3>
                   <p class="section-parag">Our goal is to identify the business problem to walk away with the perfect
                      and
                      creative solution.</p>
                </li>
-               <li>
+               <li class="item-wrk">
                   <h3 class="section-title-sz-three">Punctuality</h3>
                   <p class="section-parag">Bring the key message to the brand's audience for the best price within the
                      shortest possible time.
                   </p>
                </li>
-               <li>
+               <li class="item-wrk">
                   <h3 class="section-title-sz-three">Diligence</h3>
                   <p class="section-parag">Research and confirm brands that present the strongest digital growth
                      opportunities and minimize risk.
                   </p>
                </li>
-               <li>
+               <li class="item-wrk">
                   <h3 class="section-title-sz-three">Technologies</h3>
                   <p class="section-parag">Design practice focused on digital experiences. We bring forth a deep passion
                      for problem-solving.</p>
@@ -84,11 +84,11 @@
       <!--Section 2 - What are we doing-->
       <section class="section">
          <div class="conteiner">
-            <h2 class="section-title-sz-two">What are we doing</h2>
-            <ul class="list"> <!--list-rst-->
-               <li><img src="./images/screen-w360m.jpg" width="360" alt="Monitor on the table"></li>
-               <li><img src="./images/pages-in-phone-w360m.jpg" width="360" alt="Pages fly to the phone"></li>
-               <li><img src="./images/phone-laptop-w360m.jpg" width="360"
+            <h2 class="section-title-sz-two base-cont">What are we doing</h2>
+            <ul class="list section-wrk-dir"> <!--list-rst-->
+               <li><img class="img-ds-blok" src="./images/screen-w360m.jpg" width="360" alt="Monitor on the table"></li>
+               <li><img class="img-ds-blok" src="./images/pages-in-phone-w360m.jpg" width="360" alt="Pages fly to the phone"></li>
+               <li><img class="img-ds-blok" src="./images/phone-laptop-w360m.jpg" width="360"
                      alt="Smartphone in hend and laptop on the background"></li>
             </ul>
          </div>
@@ -96,25 +96,25 @@
       <!--Section 3 - Our Teamv-->
       <section class="section bkg-cloud">
          <div class="conteiner">
-            <h2 class="section-title-sz-two">Our Team</h2>
-            <ul class="list"> <!--list-rst-->
+            <h2 class="section-title-sz-two base-cont">Our Team</h2>
+            <ul class="list section-wrk-dir"> <!--list-rst-->
                <li class="card">
-                  <img src="./images/tiam-foto/mar-guerrero-w264.jpg" alt="Mark Guerrero Product Designer" width="264">
+                  <img class="img-ds-blok" src="./images/tiam-foto/mar-guerrero-w264.jpg" alt="Mark Guerrero Product Designer" width="264">
                   <h3 class="section-title-sz-three">Mark Guerrero</h3>
                   <p class="section-parag">Product Designer</p>
                </li>
                <li class="card">
-                  <img src="./images/tiam-foto/tom-ford-w264.jpg" alt="Tom Ford Frontend Developer" width="264">
+                  <img class="img-ds-blok" src="./images/tiam-foto/tom-ford-w264.jpg" alt="Tom Ford Frontend Developer" width="264">
                   <h3 class="section-title-sz-three">Tom Ford</h3>
                   <p class="section-parag">Frontend Developer</p>
                </li>
                <li class="card">
-                  <img src="./images/tiam-foto/camila-garcia-w264.jpg" alt="Camila Garcia Marketing" width="264">
+                  <img  class="img-ds-blok" src="./images/tiam-foto/camila-garcia-w264.jpg" alt="Camila Garcia Marketing" width="264">
                   <h3 class="section-title-sz-three">Camila Garcia</h3>
                   <p class="section-parag">Marketing</p>
                </li>
                <li class="card">
-                  <img src="./images/tiam-foto/daniel-wilson-w264.jpg" alt="Daniel Wilson UI Designer" width="264">
+                  <img class="img-ds-blok" src="./images/tiam-foto/daniel-wilson-w264.jpg" alt="Daniel Wilson UI Designer" width="264">
                   <h3 class="section-title-sz-three">Daniel Wilson</h3>
                   <p class="section-parag">UI Designer</p>
                </li>
