--- a/portfolio.html
+++ b/portfolio.html
@@ -21,22 +21,22 @@
 
 <body>
    <header>
-      <div class="conteiner">
-         <nav>
+      <div class="conteiner conteiner-flx">
+         <nav class="conteiner-flx">
             <!-- Logo  -->
-            <a class="link link-logos" href="./index.html">Web<span class="logo-color-two">Studio</span></a>
-            <!-- style="color: var(- -title-text-color-basic);" -->
+            <a class="link link-logos" href="./index.html">Web<span
+                  style="color: var(--title-text-color-basic);">Studio</span></a>
 
-            <ul class="list">
-               <li><a class="link link-item" href="./index.html">Studio</a></li>
-               <li><a class="link link-item" href="./portfolio.html">Portfolio</a></li>
-               <li><a class="link link-item" href="">Contacts</a></li>
+            <ul class="list site-nav">
+               <li class="item"><a class="link link-item" href="./index.html">Studio</a></li>
+               <li class="item"><a class="link link-item" href="./portfolio.html">Portfolio</a></li>
+               <li class="item"><a class="link link-item" href="">Contacts</a></li>
             </ul>
          </nav>
          <address class="adrs-menu">
-            <ul class="list">
-               <li> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-               <li> <a class="link link-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="list adrs-menu-list">
+               <li class="item-asdr"> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+               <li class="item-asdr"> <a class="link link-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
          </address>
       </div>
@@ -49,19 +49,19 @@
             <h1 hidden>WebStudio Portfolio Page</h1>
             <!-- Navigaton of Portfolio page -->
             <!-- <nav> -->
-            <ul class="list"> <!-- list-rst -->
-               <li><button class="filter-button" type="button">All</button></li>
-               <li><button class="filter-button" type="button">Web Site</button></li>
-               <li><button class="filter-button" type="button">App</button></li>
-               <li><button class="filter-button" type="button">Design</button></li>
-               <li><button class="filter-button" type="button">Marketing</button></li>
+            <ul class="list filter-conteiner"> <!-- list-rst -->
+               <li class="item-flt"><button class="filter-button" type="button">All</button></li>
+               <li class="item-flt"><button class="filter-button" type="button">Web Site</button></li>
+               <li class="item-flt"><button class="filter-button" type="button">App</button></li>
+               <li class="item-flt"><button class="filter-button" type="button">Design</button></li>
+               <li class="item-flt"><button class="filter-button" type="button">Marketing</button></li>
             </ul>
             <!-- </nav> -->
             <!-- Section Example Cards of WebStudio -->
 
             <!-- <h2>Works Example Cards of WebStudio</h2> -->
 
-            <ul class="list"> <!-- list-rst -->
+            <ul class="list adrs-menu-list"> <!-- list-rst -->
                <li>
                   <a class="link" href="">
                      <img src="./images/portfolio/banking-app-interface-concept.jpg" alt="Banking App Interface Concept"
