--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                <li class="item-wrk">
                   <h3 class="section-title-sz-three">Strategy</h3>
                   <p class="section-parag">Our goal is to identify the business problem to walk away with the perfect
-                     and
-                     creative solution.</p>
+                     and creative solution.</p>
                </li>
                <li class="item-wrk">
                   <h3 class="section-title-sz-three">Punctuality</h3>
@@ -86,9 +85,9 @@
          <div class="conteiner">
             <h2 class="section-title-sz-two base-cont">What are we doing</h2>
             <ul class="list section-wrk-dir"> <!--list-rst-->
-               <li><img class="img-ds-blok" src="./images/screen-w360m.jpg" width="360" alt="Monitor on the table"></li>
-               <li><img class="img-ds-blok" src="./images/pages-in-phone-w360m.jpg" width="360" alt="Pages fly to the phone"></li>
-               <li><img class="img-ds-blok" src="./images/phone-laptop-w360m.jpg" width="360"
+               <li><img class="img-sing-ds-blok" src="./images/screen-w360m.jpg" width="360" alt="Monitor on the table"></li>
+               <li><img class="img-sing-ds-blok" src="./images/pages-in-phone-w360m.jpg" width="360" alt="Pages fly to the phone"></li>
+               <li><img class="img-sing-ds-blok" src="./images/phone-laptop-w360m.jpg" width="360"
                      alt="Smartphone in hend and laptop on the background"></li>
             </ul>
          </div>
@@ -101,22 +100,22 @@
                <li class="card">
                   <img class="img-ds-blok" src="./images/tiam-foto/mar-guerrero-w264.jpg" alt="Mark Guerrero Product Designer" width="264">
                   <h3 class="section-title-sz-three">Mark Guerrero</h3>
-                  <p class="section-parag">Product Designer</p>
+                  <p class="section-parag in-card">Product Designer</p>
                </li>
                <li class="card">
                   <img class="img-ds-blok" src="./images/tiam-foto/tom-ford-w264.jpg" alt="Tom Ford Frontend Developer" width="264">
                   <h3 class="section-title-sz-three">Tom Ford</h3>
-                  <p class="section-parag">Frontend Developer</p>
+                  <p class="section-parag in-card">Frontend Developer</p>
                </li>
                <li class="card">
                   <img  class="img-ds-blok" src="./images/tiam-foto/camila-garcia-w264.jpg" alt="Camila Garcia Marketing" width="264">
                   <h3 class="section-title-sz-three">Camila Garcia</h3>
-                  <p class="section-parag">Marketing</p>
+                  <p class="section-parag in-card">Marketing</p>
                </li>
                <li class="card">
                   <img class="img-ds-blok" src="./images/tiam-foto/daniel-wilson-w264.jpg" alt="Daniel Wilson UI Designer" width="264">
                   <h3 class="section-title-sz-three">Daniel Wilson</h3>
-                  <p class="section-parag">UI Designer</p>
+                  <p class="section-parag in-card">UI Designer</p>
                </li>
             </ul>
          </div>
@@ -131,7 +130,7 @@
             <!-- style="color: var(--color-cloud);" -->
             <!-- <a class="link-rst logo footer" href="./index.html"><span
             style="color: var(--radio-buttom-text-color);">Web</span>Studio</a> -->
-         <p>Increase the flow of customers and sales for your 
+         <p class="footer-parag">Increase the flow of customers and sales for your 
             business with digital marketing & growth solutions.</p>
       </div>
    </footer>
