--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="conteiner">
          <!-- Logo -->
          <a class="link footer-link-logos" href="./index.html">
-            Web<span class="footer-parag">Studio</span></a>
+            Web<span class="footer-parag logo-mrg">Studio</span></a>
             <!-- style="color: var(--color-cloud);" -->
             <!-- <a class="link-rst logo footer" href="./index.html"><span
             style="color: var(--radio-buttom-text-color);">Web</span>Studio</a> -->
