--- a/portfolio.html
+++ b/portfolio.html
@@ -61,68 +61,68 @@
 
             <!-- <h2>Works Example Cards of WebStudio</h2> -->
 
-            <ul class="list adrs-menu-list"> <!-- list-rst -->
-               <li>
+            <ul class="list lst-work-exmpl"> <!-- list-rst -->
+               <li class="lst-card">
                   <a class="link" href="">
-                     <img src="./images/portfolio/banking-app-interface-concept.jpg" alt="Banking App Interface Concept"
+                     <img class="img-ds-blok" src="./images/portfolio/banking-app-interface-concept.jpg" alt="Banking App Interface Concept"
                         width="360">
                      <h2 class="section-title-sz-three">Banking App Interface Concept</h2>
                      <p class="section-parag">App</p>
                   </a>
                </li>
-               <li>
+               <li class="lst-card">
                   <a class="link" href="">
-                     <img src="./images/portfolio/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/cashless-payment.jpg" alt="Cashless Payment" width="360">
                      <h2 class="section-title-sz-three">Cashless Payment</h2>
                      <p class="section-parag">Marketing</p>
                   </a>
                </li>
-               <li>
+               <li class="lst-card">
                   <a class="link" href="">
-                     <img src="./images/portfolio/meditaion-app.jpg" alt="Meditaion App" width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/meditaion-app.jpg" alt="Meditaion App" width="360">
                      <h2 class="section-title-sz-three">Meditation App</h2>
                      <p class="section-parag">App</p>
                   </a>
                </li>
-               <li>
+               <li class="lst-card">
                   <a class="link" href="">
-                     <img src="./images/portfolio/taxi-service.jpg" alt="Taxi Service" width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/taxi-service.jpg" alt="Taxi Service" width="360">
                      <h2 class="section-title-sz-three">Taxi Service</h2>
                      <p class="section-parag">Marketing</p>
                   </a>
                </li>
-               <li>
+               <li class="lst-card">
                   <a class="link" href="">
-                     <img src="./images/portfolio/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
                      <h2 class="section-title-sz-three">Screen Illustrations</h2>
                      <p class="section-parag">Design</p>
                   </a>
                </li>
-               <li>
+               <li class="lst-card">
                   <a class="link" href="">
-                     <img src="./images/portfolio/online-courses.jpg" alt="Online Courses" width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/online-courses.jpg" alt="Online Courses" width="360">
                      <h2 class="section-title-sz-three">Online Courses</h2>
                      <p class="section-parag">Marketing</p>
                   </a>
                </li>
-               <li>
+               <li class="lst-card">
                   <a class="link" href="">
-                     <img src="./images/portfolio/instagram-stories-concept.jpg" alt="Instagram Stories Concept"
+                     <img class="img-ds-blok" src="./images/portfolio/instagram-stories-concept.jpg" alt="Instagram Stories Concept"
                         width="360">
                      <h2 class="section-title-sz-three">Instagram Stories Concept</h2>
                      <p class="section-parag">Design</p>
                   </a>
                </li>
-               <li>
+               <li class="lst-card">
                   <a class="link" href="">
-                     <img src="./images/portfolio/organic-food.jpg" alt="Organic Food" width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/organic-food.jpg" alt="Organic Food" width="360">
                      <h2 class="section-title-sz-three">Organic Food</h2>
                      <p class="section-parag">Web Site</p>
                   </a>
                </li>
-               <li>
+               <li class="lst-card">
                   <a class="link" href="">
-                     <img src="./images/portfolio/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
                      <h2 class="section-title-sz-three">Fresh Coffee</h2>
                      <p class="section-parag">Web Site</p>
                   </a>
@@ -132,14 +132,14 @@
       </section>
    </main>
    <!-- Footer section -->
-   <footer class=" footer-set">
+   <footer class="footer-set">
       <div class="conteiner">
          <!-- Logo -->
          <a class="link footer-link-logos" href="./index.html">Web
-            <span class="footer-parag">Studio</span></a>
+            <span class="footer-parag logo-mrg">Studio</span></a>
          <!-- <a class="link-rst logo footer" href="./index.html"><span
          style="color: var(- -radio-buttom-text-color);">Web</span>Studio</a> -->
-         <p>Increase the flow of customers and sales for your business
+         <p class="footer-parag">Increase the flow of customers and sales for your business
             with digital marketing & growth solutions.</p>
       </div>
    </footer>
