--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,7 @@
             <h1 hidden>WebStudio Portfolio Page</h1>
             <!-- Navigaton of Portfolio page -->
             <!-- <nav> -->
+            <div class="">
             <ul class="list filter-conteiner"> <!-- list-rst -->
                <li class="item-flt"><button class="filter-button" type="button">All</button></li>
                <li class="item-flt"><button class="filter-button" type="button">Web Site</button></li>
@@ -56,6 +57,7 @@
                <li class="item-flt"><button class="filter-button" type="button">Design</button></li>
                <li class="item-flt"><button class="filter-button" type="button">Marketing</button></li>
             </ul>
+            </div>
             <!-- </nav> -->
             <!-- Section Example Cards of WebStudio -->
 
