--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,8 @@
          </nav>
          <address class="adrs-menu">
             <ul class="list adrs-menu-list">
-               <li class="item-asdr"> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+               <li class="item-asdr"> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a>
+               </li>
                <li class="item-asdr"> <a class="link link-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
          </address>
@@ -49,7 +50,7 @@
             <h1 hidden>WebStudio Portfolio Page</h1>
             <!-- Navigaton of Portfolio page -->
             <!-- <nav> -->
-            <div class="">
+
             <ul class="list filter-conteiner"> <!-- list-rst -->
                <li class="item-flt"><button class="filter-button" type="button">All</button></li>
                <li class="item-flt"><button class="filter-button" type="button">Web Site</button></li>
@@ -57,7 +58,7 @@
                <li class="item-flt"><button class="filter-button" type="button">Design</button></li>
                <li class="item-flt"><button class="filter-button" type="button">Marketing</button></li>
             </ul>
-            </div>
+
             <!-- </nav> -->
             <!-- Section Example Cards of WebStudio -->
 
@@ -66,22 +67,24 @@
             <ul class="list lst-work-exmpl"> <!-- list-rst -->
                <li class="lst-card">
                   <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/banking-app-interface-concept.jpg" alt="Banking App Interface Concept"
-                        width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/banking-app-interface-concept.jpg"
+                        alt="Banking App Interface Concept" width="360">
                      <h2 class="section-title-sz-three">Banking App Interface Concept</h2>
                      <p class="section-parag">App</p>
                   </a>
                </li>
                <li class="lst-card">
                   <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/cashless-payment.jpg" alt="Cashless Payment"
+                        width="360">
                      <h2 class="section-title-sz-three">Cashless Payment</h2>
                      <p class="section-parag">Marketing</p>
                   </a>
                </li>
                <li class="lst-card">
                   <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/meditaion-app.jpg" alt="Meditaion App" width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/meditaion-app.jpg" alt="Meditaion App"
+                        width="360">
                      <h2 class="section-title-sz-three">Meditation App</h2>
                      <p class="section-parag">App</p>
                   </a>
@@ -95,22 +98,24 @@
                </li>
                <li class="lst-card">
                   <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/screen-illustrations.jpg"
+                        alt="Screen Illustrations" width="360">
                      <h2 class="section-title-sz-three">Screen Illustrations</h2>
                      <p class="section-parag">Design</p>
                   </a>
                </li>
                <li class="lst-card">
                   <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/online-courses.jpg" alt="Online Courses" width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/online-courses.jpg" alt="Online Courses"
+                        width="360">
                      <h2 class="section-title-sz-three">Online Courses</h2>
                      <p class="section-parag">Marketing</p>
                   </a>
                </li>
                <li class="lst-card">
                   <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/instagram-stories-concept.jpg" alt="Instagram Stories Concept"
-                        width="360">
+                     <img class="img-ds-blok" src="./images/portfolio/instagram-stories-concept.jpg"
+                        alt="Instagram Stories Concept" width="360">
                      <h2 class="section-title-sz-three">Instagram Stories Concept</h2>
                      <p class="section-parag">Design</p>
                   </a>
