--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-   <header>
+   <header class="heder-bord">
       <div class="conteiner conteiner-flx">
          <nav class="conteiner-flx">
             <!-- Logo  -->
@@ -34,7 +34,8 @@
          </nav>
          <address class="adrs-menu">
             <ul class="list adrs-menu-list">
-               <li class="item-asdr"> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+               <li class="item-asdr"> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a>
+               </li>
                <li class="item-asdr"> <a class="link link-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
          </address>
@@ -85,8 +86,10 @@
          <div class="conteiner">
             <h2 class="section-title-sz-two base-cont">What are we doing</h2>
             <ul class="list section-wrk-dir"> <!--list-rst-->
-               <li><img class="img-sing-ds-blok" src="./images/screen-w360m.jpg" width="360" alt="Monitor on the table"></li>
-               <li><img class="img-sing-ds-blok" src="./images/pages-in-phone-w360m.jpg" width="360" alt="Pages fly to the phone"></li>
+               <li><img class="img-sing-ds-blok" src="./images/screen-w360m.jpg" width="360" alt="Monitor on the table">
+               </li>
+               <li><img class="img-sing-ds-blok" src="./images/pages-in-phone-w360m.jpg" width="360"
+                     alt="Pages fly to the phone"></li>
                <li><img class="img-sing-ds-blok" src="./images/phone-laptop-w360m.jpg" width="360"
                      alt="Smartphone in hend and laptop on the background"></li>
             </ul>
@@ -98,22 +101,26 @@
             <h2 class="section-title-sz-two base-cont">Our Team</h2>
             <ul class="list section-wrk-dir"> <!--list-rst-->
                <li class="card">
-                  <img class="img-ds-blok" src="./images/tiam-foto/mar-guerrero-w264.jpg" alt="Mark Guerrero Product Designer" width="264">
+                  <img class="img-ds-blok" src="./images/tiam-foto/mar-guerrero-w264.jpg"
+                     alt="Mark Guerrero Product Designer" width="264">
                   <h3 class="section-title-sz-three">Mark Guerrero</h3>
                   <p class="section-parag in-card">Product Designer</p>
                </li>
                <li class="card">
-                  <img class="img-ds-blok" src="./images/tiam-foto/tom-ford-w264.jpg" alt="Tom Ford Frontend Developer" width="264">
+                  <img class="img-ds-blok" src="./images/tiam-foto/tom-ford-w264.jpg" alt="Tom Ford Frontend Developer"
+                     width="264">
                   <h3 class="section-title-sz-three">Tom Ford</h3>
                   <p class="section-parag in-card">Frontend Developer</p>
                </li>
                <li class="card">
-                  <img  class="img-ds-blok" src="./images/tiam-foto/camila-garcia-w264.jpg" alt="Camila Garcia Marketing" width="264">
+                  <img class="img-ds-blok" src="./images/tiam-foto/camila-garcia-w264.jpg" alt="Camila Garcia Marketing"
+                     width="264">
                   <h3 class="section-title-sz-three">Camila Garcia</h3>
                   <p class="section-parag in-card">Marketing</p>
                </li>
                <li class="card">
-                  <img class="img-ds-blok" src="./images/tiam-foto/daniel-wilson-w264.jpg" alt="Daniel Wilson UI Designer" width="264">
+                  <img class="img-ds-blok" src="./images/tiam-foto/daniel-wilson-w264.jpg"
+                     alt="Daniel Wilson UI Designer" width="264">
                   <h3 class="section-title-sz-three">Daniel Wilson</h3>
                   <p class="section-parag in-card">UI Designer</p>
                </li>
@@ -127,10 +134,10 @@
          <!-- Logo -->
          <a class="link footer-link-logos" href="./index.html">
             Web<span class="footer-parag logo-mrg">Studio</span></a>
-            <!-- style="color: var(--color-cloud);" -->
-            <!-- <a class="link-rst logo footer" href="./index.html"><span
+         <!-- style="color: var(--color-cloud);" -->
+         <!-- <a class="link-rst logo footer" href="./index.html"><span
             style="color: var(--radio-buttom-text-color);">Web</span>Studio</a> -->
-         <p class="footer-parag">Increase the flow of customers and sales for your 
+         <p class="footer-parag">Increase the flow of customers and sales for your
             business with digital marketing & growth solutions.</p>
       </div>
    </footer>
