--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-   <header>
+   <header class="heder-bord">
       <div class="conteiner conteiner-flx">
          <nav class="conteiner-flx">
             <!-- Logo  -->
