--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
    <main>
       <!--Section Main Slogan H1 -->
       <section class="hero">
-         <div class="conteiner">
+         <div class="conteiner hero-pls">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <!--Button -->
             <button class="base-button" type="button">Order Service</button>
          </div>
       </section>
       <!--Section 1 Work Directions -->
-      <section class="section">
+      <section class="section sect-pdng-tp">
          <div class="conteiner">
-            <h2 class="section-title-sz-two" hidden>Work Directions</h2> <!-- Hiden header -->
+            <h2 class="section-title-sz-two visually-hidden">Work Directions</h2> <!-- Hiden header -->
             <ul class="list section-wrk-dir"> <!--list-rst-->
                <li class="item-wrk">
                   <h3 class="section-title-sz-three">Strategy</h3>
