--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
          <div class="conteiner">
             <h2 class="section-title-sz-two base-cont">What are we doing</h2>
             <ul class="list section-wrk-dir"> <!--list-rst-->
-               <li><img class="img-sing-ds-blok" src="./images/screen-w360m.jpg" width="360" alt="Monitor on the table">
+               <li class="item-wrk-3col"><img class="img-sing-ds-blok" src="./images/screen-w360m.jpg" width="360" alt="Monitor on the table">
                </li>
-               <li><img class="img-sing-ds-blok" src="./images/pages-in-phone-w360m.jpg" width="360"
+               <li class="item-wrk-3col"><img class="img-sing-ds-blok" src="./images/pages-in-phone-w360m.jpg" width="360"
                      alt="Pages fly to the phone"></li>
-               <li><img class="img-sing-ds-blok" src="./images/phone-laptop-w360m.jpg" width="360"
+               <li class="item-wrk-3col"><img class="img-sing-ds-blok" src="./images/phone-laptop-w360m.jpg" width="360"
                      alt="Smartphone in hend and laptop on the background"></li>
             </ul>
          </div>
@@ -100,25 +100,25 @@
          <div class="conteiner">
             <h2 class="section-title-sz-two base-cont">Our Team</h2>
             <ul class="list section-wrk-dir"> <!--list-rst-->
-               <li class="card">
+               <li class="card item-wrk">
                   <img class="img-ds-blok" src="./images/tiam-foto/mar-guerrero-w264.jpg"
                      alt="Mark Guerrero Product Designer" width="264">
                   <h3 class="section-title-sz-three">Mark Guerrero</h3>
                   <p class="section-parag in-card">Product Designer</p>
                </li>
-               <li class="card">
+               <li class="card item-wrk">
                   <img class="img-ds-blok" src="./images/tiam-foto/tom-ford-w264.jpg" alt="Tom Ford Frontend Developer"
                      width="264">
                   <h3 class="section-title-sz-three">Tom Ford</h3>
                   <p class="section-parag in-card">Frontend Developer</p>
                </li>
-               <li class="card">
+               <li class="card item-wrk">
                   <img class="img-ds-blok" src="./images/tiam-foto/camila-garcia-w264.jpg" alt="Camila Garcia Marketing"
                      width="264">
                   <h3 class="section-title-sz-three">Camila Garcia</h3>
                   <p class="section-parag in-card">Marketing</p>
                </li>
-               <li class="card">
+               <li class="card item-wrk">
                   <img class="img-ds-blok" src="./images/tiam-foto/daniel-wilson-w264.jpg"
                      alt="Daniel Wilson UI Designer" width="264">
                   <h3 class="section-title-sz-three">Daniel Wilson</h3>
