--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
    <main>
       <section class="section">
          <div class="conteiner">
-            <h1 hidden>WebStudio Portfolio Page</h1>
+            <h1 class="visually-hidden">WebStudio Portfolio Page</h1>
             <!-- Navigaton of Portfolio page -->
             <!-- <nav> -->
 
@@ -66,7 +66,7 @@
 
             <ul class="list lst-work-exmpl"> <!-- list-rst -->
                <li class="lst-card">
-                  <a class="link" href="">
+                  <a class="link" href="#">
                      <img class="img-ds-blok" src="./images/portfolio/banking-app-interface-concept.jpg"
                         alt="Banking App Interface Concept" width="360">
                      <h2 class="section-title-sz-three">Banking App Interface Concept</h2>
