--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <li class="cadr-itm">
             <div class="icon-pls">
               <svg class="icon-wd">
-                <use href="./images/symbol-defs-03-1.svg#radar"></use>
+                <use href="./images/symbol-defs-03-1.svg#wd-punct-clock"></use>
               </svg>
             </div>
             <div class="card-cont">
@@ -104,7 +104,7 @@
           <li class="cadr-itm">
             <div class="icon-pls">
               <svg class="icon-wd">
-                <use href="./images/symbol-defs-03-1.svg#radar"></use>
+                <use href="./images/symbol-defs-03-1.svg#wd-dilig-diagram"></use>
               </svg>
             </div>
             <div class="card-cont">
@@ -118,7 +118,7 @@
           <li class="cadr-itm">
             <div class="icon-pls">
               <svg class="icon-wd">
-                <use href="./images/symbol-defs-03-1.svg#radar"></use>
+                <use href="./images/symbol-defs-03-1.svg#wd-tech-cosmo"></use>
               </svg>
             </div>
             <div class="card-cont">
@@ -164,34 +164,42 @@
               <p>Product Designer</p>
             </div>
 
-            <!-- Blok Social net icons Try 2  -->
-            <div class="icn-scnet-blok">
-              <!-- Social net icon -->
-              <div class="icn-scnet-rd">
+           <!-- Blok Social net icons Try 4 Link  -->
+           <ul class="rest-list icn-scnet-blok">
+            <li>
+              <a class="rest-link icn-scnet-rd" href="">
+                <!-- <p>Icon</p> -->
                 <svg class="icn-pic">
-                  <use href="./images/srite-scico-04.svg#insta-42"></use>
+                  <use href="./images/symbol-defs-03-1.svg#sn-insta"></use>
                 </svg>
-              </div>
-              <!-- Social net icon -->
-              <div class="icn-scnet-rd">
+              </a>
+            </li>
+            <li>
+              <a class="rest-link icn-scnet-rd" href="">
+                <!-- <p>Icon</p> -->
                 <svg class="icn-pic">
-                  <use href="./images/srite-scico-04.svg#twit-42"></use>
+                  <use href="./images/symbol-defs-03-1.svg#sn-twit"></use>
                 </svg>
-              </div>
-              <!-- Social net icon -->
-              <div class="icn-scnet-rd">
+              </a>
+            </li>
+            <li>
+              <a class="rest-link icn-scnet-rd" href="">
+                <!-- <p>Icon</p> -->
                 <svg class="icn-pic">
-                  <use href="./images/srite-scico-04.svg#fb-42"></use>
+                  <use href="./images/symbol-defs-03-1.svg#sn-fb"></use>
                 </svg>
-              </div>
-              <!-- Social net icon -->
-              <div class="icn-scnet-rd">
+              </a>
+            </li>
+            <li>
+              <a class="rest-link icn-scnet-rd" href="">
+                <!-- <p>Icon</p> -->
                 <svg class="icn-pic">
-                  <use href="./images/srite-scico-04.svg#likin-42"></use>
+                  <use href="./images/symbol-defs-03-1.svg#sn-linin"></use>
                 </svg>
-              </div>
-            </div>
-            <!-- END Blok Social net icons Try 2 -->
+              </a>
+            </li>
+          </ul>
+          <!-- END  Blok Social net icons Try 4 Link  -->
           </li>
           <li class="cadr-itm adt-set">
             <img class="rest-img-blok mrg-dn" src="./images/tiam-foto/tom-ford-w264.jpg"
