--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
 
    <!-- It is main Portfolio -->
    <main>
-      <section class="section-site-pdng">
+      <section class="section-site-pdng sect-pdng-top">
          <div class="conteiner-a">
             <h1 class="visually-hidden">WebStudio Portfolio Page</h1>
             <!-- Navigaton of Portfolio page -->
