--- a/portfolio.html
+++ b/portfolio.html
@@ -55,8 +55,8 @@
 
    <!-- It is main Portfolio -->
    <main>
-      <section class="section-site-pdng sect-pdng-top">
-         <div class="conteiner-a">
+      <section>
+         <div class="conteiner-a section-site-pdng sect-pdng-top">
             <h1 class="visually-hidden">WebStudio Portfolio Page</h1>
             <!-- Navigaton of Portfolio page -->
             <!-- <nav> -->
