style "section-slog"
style "section-slog"
moved to tag section

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
   <main>
     <!--Section Main Slogan H1 -->
-    <section>
-      <div class="conteiner-a section-slog">
+    <section class="section-slog">
+      <div class="conteiner-a">
       <div class="blok-slog">
         <h1 class="txt-title-h-one slog-marg">
           Effective Solutions for Your Business
